# camcal

./: .gitignore  .pre-commit-config.yaml  README.md  camcal.code-workspace  camera_calib.parquet  main.py  pyproject.toml  tmp.py
.github/workflows/: ci.yml
camcal/: __init__.py  pyproject.toml
camcal/src/: aperture_cropping.py  calibration.py  cam_cal.py  camera.py  image.py  pairing.py  process_manager.py  processing.py  tools.py
camcal/src/camcal/: __init__.py  aperture_cropping.py  cam_cal.py  camera.py  cmaps.py  globals.py  image.py  pairing.py  process_manager.py  processing.py
