[tool.poetry]
name = "camcal"
version = "0.1.0"
description = "Small helper package to perform camera orientation caliobration and automated processing of images taken"
authors = ["nfb2021 <nicolas.bader@geo.tuwien.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
opencv-python-headless = "^4.10.0.84"
opencv-contrib-python = "^4.10.0.84"
pydantic = "^2.0"
ipykernel = "^6.29.5"
numpy = "^2.1.2"
screeninfo = "^0.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
mypy = "^1.13.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
coverage = "^7.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
